cpp/hexadecimal/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.013s
user	0m0.002s
sys	0m0.011s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
[ 25%] Building CXX object CMakeFiles/hexadecimal.dir/hexadecimal_test.cpp.o
[ 50%] Building CXX object CMakeFiles/hexadecimal.dir/hexadecimal.cpp.o
[ 75%] Building CXX object CMakeFiles/hexadecimal.dir/test/tests-main.cpp.o
[100%] Linking CXX executable hexadecimal
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
[100%] Built target hexadecimal
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
===============================================================================
All tests passed (10 assertions in 10 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
[100%] Built target test_hexadecimal
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/hexadecimal.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/hexadecimal.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)25893"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
hexadecimal.cpp                               15      15   100%   
hexadecimal_test.cpp                          20      20   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         67      62    92%
------------------------------------------------------------------------------
lines: 92.5% (62 out of 67)
branches: 40.0% (80 out of 200)

real	0m12.943s
user	0m11.796s
sys	0m1.141s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.144s
user	0m0.102s
sys	0m0.042s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.171s
user	0m0.113s
sys	0m0.059s

===============================================================================

Running: clang-format-16 -style=file -i ./hexadecimal.cpp ./hexadecimal_test.cpp ./hexadecimal.h

real	0m0.019s
user	0m0.008s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./hexadecimal.cpp ./hexadecimal_test.cpp ./hexadecimal.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/hexadecimal.h:4:10: fatal error: 'cmath' file not found
#include <cmath>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/hexadecimal.h.

real	0m3.244s
user	0m3.139s
sys	0m0.104s


real	0m3.246s
user	0m3.139s
sys	0m0.107s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
40226 warnings generated.
84427 warnings generated.
84429 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/hexadecimal.h.
Suppressed 84432 warnings (84427 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m17.793s
user	0m17.645s
sys	0m0.148s
Running: clang-tidy-16 ./hexadecimal.cpp ./hexadecimal_test.cpp ./hexadecimal.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/hexadecimal.h:4:10: error: 'cmath' file not found [clang-diagnostic-error]
#include <cmath>
         ^~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/hexadecimal.h:11:5: warning: variable 'convert' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
int convert(std::string hexadecimal);
    ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/hexadecimal/hexadecimal.h:13:6: warning: variable 'is_valid_input' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
bool is_valid_input(std::string hexadecimal);
     ^


real	0m17.795s
user	0m17.645s
sys	0m0.151s

===============================================================================

